objects/ACROBj1__c.object
<CustomObject>
    <fields>
        <fullName>Field2__c</fullName>
        <description>Test sai kumar @#$%^&amp;*()_+-=?&gt;&lt;,./&quot;:;&apos;\][}{~!</description>
        <label>Field2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <description>sai phone symbol test 📞 and edit 📞</description>
        <label>Field3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field4__c</fullName>
        <label>Field4</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>ACRObj1</label>
    <nameField>
        <label>ACRObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACRObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>